fix tags and links\

--- a/2021-12-19t22-34-39z.md
+++ b/2021-12-19t22-34-39z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 22:34:39
 title: Stochastic Gradient Descent
 id: 2021-12-19t22-34-39z
-tags: [uva, uva_ml1]
+tags: [uva, uva_ml1, uva_dl1]
 ---
 
 Normal [gradient descent](./2021-04-27t16-51-42z.md) requires evaluating the
