--- a/2021-12-19t22-59-41z.md
+++ b/2021-12-19t22-59-41z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 22:59:41
 title: Momentum-based optimization
 id: 2021-12-19t22-59-41z
-tags: [uva, uva_ml1]
+tags: [uva, uva_dl1]
 ---
 
 Here we simply modify our [SGD](./2021-12-19t22-34-39z.md) update formula with a
