--- a/2021-12-19t23-02-15z.md
+++ b/2021-12-19t23-02-15z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 23:02:15
 title: Nesterov Momentum
 id: 2021-12-19t23-02-15z
-tags: [uva, uva_ml1]
+tags: [uva, uva_dl1]
 ---
 
 This is similar to [vanilla momentum](./2021-12-19t22-59-41z.md), except instead
