--- a/2021-12-19t23-04-27z.md
+++ b/2021-12-19t23-04-27z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 23:04:27
 title: AdaDelta for SGD
 id: 2021-12-19t23-04-27z
-tags: [uva, uva_ml1]
+tags: [uva, uva_dl1]
 ---
 
 This is the same as [AdaGrad](./2021-12-19t23-03-21z.md), but it restricts the
