--- a/2021-12-19t23-11-04z.md
+++ b/2021-12-19t23-11-04z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 23:11:04
 title: RMSProp for SGD
 id: 2021-12-19t23-11-04z
-tags: [uva, uva_ml1]
+tags: [uva, uva_dl1]
 ---
 
 This is a modification of [AdaGrad](./2021-12-19t23-03-21z.md) for non-convex
