--- a/2021-12-19t23-11-32z.md
+++ b/2021-12-19t23-11-32z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 23:11:32
 title: Adam for SGD
 id: 2021-12-19t23-11-32z
-tags: [uva, uva_ml1]
+tags: [uva, uva_dl1]
 ---
 
 Adaptive Moment Estimation (Adam) is an extension to
