--- a/2021-12-21t19-39-24z.md
+++ b/2021-12-21t19-39-24z.md
@@ -20,8 +20,7 @@ In [ML](./2021-09-09t10-48-40z.md), one distinguishes between **features**,
         [Computer Vision](./2021-09-25t17-12-58z.md) where many state of art
         results were achieved by abandoning feature engineered approaches
         (e.g.[HoG - SVM](https://en.wikipedia.org/wiki/Histogram_of_oriented_gradients))
-        in favour of
-        [Convolutional Neural Nets](https://en.wikipedia.org/wiki/Convolutional_neural_network)
+        in favour of [Convolutional Neural Nets](./2021-12-21t22-19-52z.md)
         where the raw pixels were directly fed into the algorithm to exploit the
         greater compute power and capacity to achieve more complex models.
 - **parameters**: These are the variables/coefficients that the algorithm tunes
