--- a/2021-12-19t23-03-21z.md
+++ b/2021-12-19t23-03-21z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 23:03:21
 title: AdaGrad for SGD
 id: 2021-12-19t23-03-21z
-tags: [uva, uva_ml1]
+tags: [uva, uva_dl1]
 ---
 
 This is a gradient update algorithm extending [SGD](./2021-12-19t22-34-39z.md)
