link heaps and zipfs law

--- a/2022-03-26t10-24-16z.md
+++ b/2022-03-26t10-24-16z.md
@@ -19,3 +19,5 @@ word, three times as the third most frequent word, and so on.
 
 For reference, see the
 [wikipedia page](https://en.wikipedia.org/wiki/Zipf%27s_law)
+
+See also: [heaps' law](./2022-03-26t10-35-33z.md).
