--- a/2022-03-26t10-35-33z.md
+++ b/2022-03-26t10-35-33z.md
@@ -14,3 +14,5 @@ $$
 
 where $K$ and $\Beta$ are free, empirically determined parameters. In English,
 they tend to be between 10 and 100 and 0.4 and 0.6 respectively.
+
+See also: [zipf's law](./2022-03-26t10-24-16z.md).
