--- a/2022-03-26t10-24-16z.md
+++ b/2022-03-26t10-24-16z.md
@@ -10,8 +10,11 @@ follow Zipf's Law: the frequency of a word in a given corpus is inversely
 proportional to its frequency rank:
 
 $$
-f(w_r) = \frac{1}{r}
+f(w_r) = \frac{1}{r^\s},
 $$
+
+where $s$ is some empirically determined parameter, classically set to 1. This
+makes Zipf's law an instance of a [power law](./2022-03-26t12-03-25z.md).
 
 The $rth$ most frequent word has a frequency proportional to $1/r$. That is, the
 most frequent word will occur twice as many times as the second most frequent
