--- a/2022-03-26t10-35-33z.md
+++ b/2022-03-26t10-35-33z.md
@@ -15,4 +15,7 @@ $$
 where $K$ and $\Beta$ are free, empirically determined parameters. In English,
 they tend to be between 10 and 100 and 0.4 and 0.6 respectively.
 
+Note that the exponentiation by $\Beta$ makes Heaps' Law an instance of a
+[power law](./2022-03-26t12-03-25z.md)
+
 See also: [zipf's law](./2022-03-26t10-24-16z.md).
