--- a/2020-08-24t15-19-14z.md
+++ b/2020-08-24t15-19-14z.md
@@ -5,17 +5,17 @@ id: 2020-08-24t15-19-14z
 ---
 
 The Zettelkasten is a system for taking notes and knowledge management made
-famous by prolific German sociologist [Niklas
-Luhman](https://en.wikipedia.org/wiki/Niklas_Luhmann) and summarised to
+famous by prolific German sociologist
+[Niklas Luhman](https://en.wikipedia.org/wiki/Niklas_Luhmann) and summarised to
 a modern audience by Sonke Ahrens in his book "How to Take Smart Notes"
 [@ahrensHowTakeSmart2017]. The underlining principle of the system is to act as
 a second brain, facilitating connections and discovery of insights. The method
 can be summarised in the following steps:
 
-1. Whenever you think of something, a fleeting thought, write it down in
-   a collection of notes known as your _fleeting notes_.
-2. Whenever you read/watch/listen for knowledge, ensure you are doing so with
-   a pen in hand so that you can actively take notes on it using your own words.
+1. Whenever you think of something, a fleeting thought, write it down in a
+   collection of notes known as your _fleeting notes_.
+2. Whenever you read/watch/listen for knowledge, ensure you are doing so with a
+   pen in hand so that you can actively take notes on it using your own words.
    Keep this collection of notes closely linked to a reference system, forming
    together your literature notes
    ([how do I read scientific literature?](./2020-09-23t17-47-37z.md)).
@@ -27,7 +27,8 @@ can be summarised in the following steps:
      understood far in the future.
 4. "Position" the new zettels within your notes, the slip-box, the Zettelkasten:
    - add links when possible.
-   - use [index notes and structure notes](./2020-08-26t20-38-25z.md) to facilitate navigation.
+   - use [index notes and structure notes](./2020-08-26t20-38-25z.md) to
+     facilitate navigation.
    - use [tags](./2020-08-26t20-49-24z.md) for better future retrieval
 
 ## References
