--- a/2022-03-26t15-44-21z.md
+++ b/2022-03-26t15-44-21z.md
@@ -7,9 +7,10 @@ tags: [uva, uva_ir1]
 
 One way of
 [evaluating an information retrieval system](./2022-03-26t15-04-29z.md) is via
-offline evaluation. Here, we use an assortment of metrics to evaluate how well
-our system performs in ranking a set of test documents given a set of test
-queries by comparing our system's rankings to a ground truth.
+offline evaluation. Here, we use an assortment of
+[metrics](./2022-03-26t16-56-05z.md) to evaluate how well our system performs in
+ranking a set of test documents given a set of test queries by comparing our
+system's rankings to a ground truth.
 
 The set of test queries, test documents and ground-truth labels are known as the
 [test collection](./2022-03-26t15-51-04z.md)
