--- a/2022-03-26t17-03-48z.md
+++ b/2022-03-26t17-03-48z.md
@@ -10,5 +10,5 @@ User-oriented metrics are family of metrics typically used in
 user with the system into account. Examples include
 
 - [Discounted Cumulative Gain](./2022-03-26t18-05-08z.md)
-- Rank-biased precision
+- [Rank-biased precision](./2022-03-26t20-07-26z.md)
 - Expected Reciprocal Rank
