term based retrieval

--- a/2021-12-19t16-54-54z.md
+++ b/2021-12-19t16-54-54z.md
@@ -2,7 +2,7 @@
 date: 2021-12-19 16:54:54
 title: Measuring Similarity in Distributional Semantics
 id: 2021-12-19t16-54-54z
-tags: [uva, uva_nlp1]
+tags: [uva, uva_nlp1, uva_ir1]
 ---
 
 Since [distributional semantics](./2021-12-19t16-47-22z.md) treats word meanings
