--- a/2022-03-26t20-44-53z.md
+++ b/2022-03-26t20-44-53z.md
@@ -5,7 +5,9 @@ id: 2022-03-26t20-44-53z
 tags: [uva, uva_ir1]
 ---
 
-In term based retrieval, we represent our documents and queries as vectors.
+In [information retrieval](./2022-03-26t12-31-28z.md), term based retrieval is
+the process of retrieving documents given a query by representing our documents
+and queries as vectors based on the terms contained within them.
 
 We can then perform
 [matching via similarity metrics such as cosine similarity](./2021-12-19t16-54-54z.md)
