--- a/2022-03-26t20-44-53z.md
+++ b/2022-03-26t20-44-53z.md
@@ -12,7 +12,7 @@ and queries as vectors based on the terms contained within them.
 We can then perform
 [matching via similarity metrics such as cosine similarity](./2021-12-19t16-54-54z.md)
 
-But what can we use to represent our documents as vectors?
+But what can we use for this kind of retrieval?
 
 - [BoW](https://en.wikipedia.org/wiki/Bag-of-words_model) based on
   - presence
