--- a/2022-03-26t20-07-26z.md
+++ b/2022-03-26t20-07-26z.md
@@ -17,7 +17,7 @@ With this user model, the metric tries to estimate the average utility of all
 results:
 
 $$
-RBP = \frac{sum^N_{k=1}U@k}{E},
+RBP = \frac{\sum^N_{k=1}U@k}{E},
 $$
 
 where $U@k$ is the utility at rank $k$ and $E$ is the average number of examined
