--- a/2022-03-26t20-47-30z.md
+++ b/2022-03-26t20-47-30z.md
@@ -17,7 +17,7 @@ To account for this issue, which stems from data sparsity we make use of
 Jelinek-Mercer smoothing, which adjusts query likelihood as such:
 
 $$
-P(Q|D) = \prod_{i=1}^n\left((1-\lambda)\frac{f_{q_i, D}}{|D|} +
+P(Q|D) = \prod_{i=1}^n\left((1-\lambda)\frac{f_{q_i, D}}{|D|} + \lambda
 \frac{c_{q_i}}{|C|}\right),
 $$
 
@@ -28,7 +28,7 @@ As we [often do](./2021-09-11t16-23-45z.md), we take the log to simplify
 computation:
 
 $$
-P(Q|D) = \sum_{i=1}^n\log\left((1-\lambda)\frac{f_{q_i, D}}{|D|} +
+\log P(Q|D) = \sum_{i=1}^n\log\left((1-\lambda)\frac{f_{q_i, D}}{|D|} + \lambda
 \frac{c_{q_i}}{|C|}\right).
 $$
 
