--- a/2020-11-23t14-52-02z.md
+++ b/2020-11-23t14-52-02z.md
@@ -1,6 +1,6 @@
 ---
 date: 2020-11-23 14:52:02
-title: Box Cox Transformation 
+title: Box Cox Transformation
 id: 2020-11-23t14-52-02z
 ---
 
@@ -13,6 +13,7 @@ non-normally distributed data into normally distributed data.
 This is done by estimating some parameter $\lambda$ that normalizes our
 variable $y$ in the following set of equations:
 
-$$ y_{i}^{(\lambda )}={\begin{cases}{\dfrac {y_{i}^{\lambda }-1}{\lambda
+$$
+y_{i}^{(\lambda )}={\begin{cases}{\dfrac {y_{i}^{\lambda }-1}{\lambda
 }}&{\text{if }}\lambda \neq 0,\\\ln y_{i}&{\text{if }}\lambda =0,\end{cases}}
 $$
