--- a/2021-12-22t17-24-16z.md
+++ b/2021-12-22t17-24-16z.md
@@ -33,7 +33,7 @@ $$
 $$
 
 The process of computing the posterior distribution over our latent variable $z$
-is referred to as _inference_. Mathematically, we can express interest as
+is referred to as _inference_. Mathematically, we can express inference as
 
 $$
 p(z|x) = \frac{p(x, z)}{p(x)} = \frac{p(x, z)}{\int p(x, z) dz}.
