--- a/2021-12-22t19-22-15z.md
+++ b/2021-12-22t19-22-15z.md
@@ -29,7 +29,7 @@ Importantly, with this expression, the KL term can be computed in
 
 Returning to our extension of the autoencoder, we note that $q_\phi(z|x)$ is
 implemented as our encoder network and $p_\theta(x|z)$ is implemented as our
-decoder network.
+decoder network, typically taken to be a Gaussian distribution.
 
 Like any latent variable model, VAEs will suffer with
 [variational inference suboptmiality](./2021-12-22t19-44-42z.md).
