git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "ca9f145"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "ca9f145"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -25,7 +25,37 @@
   keywords = {Reference / Writing Skills,Self-Help / Personal Growth / Memory Improvement,Self-Help / Self-Management / Time Management,Study Aids / Book Notes}
 }
 
+@inproceedings{antoniakBadSeedsEvaluating2021,
+  title = {Bad {{Seeds}}: {{Evaluating Lexical Methods}} for {{Bias Measurement}}},
+  shorttitle = {Bad {{Seeds}}},
+  booktitle = {Proceedings of the 59th {{Annual Meeting}} of the {{Association}} for {{Computational Linguistics}} and the 11th {{International Joint Conference}} on {{Natural Language Processing}} ({{Volume}} 1: {{Long Papers}})},
+  author = {Antoniak, Maria and Mimno, David},
+  year = {2021},
+  month = aug,
+  pages = {1889--1904},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Online}},
+  doi = {10.18653/v1/2021.acl-long.148},
+  file = {/Users/thesofakillers/Zotero/storage/VDUBRC22/Antoniak_Mimno_2021_Bad Seeds.pdf}
+}
+
+@article{bachPromptSourceIntegratedDevelopment2022,
+  title = {{{PromptSource}}: {{An Integrated Development Environment}} and {{Repository}} for {{Natural Language Prompts}}},
+  shorttitle = {{{PromptSource}}},
+  author = {Bach, Stephen H. and Sanh, Victor and Yong, Zheng-Xin and Webson, Albert and Raffel, Colin and Nayak, Nihal V. and Sharma, Abheesht and Kim, Taewoon and Bari, M. Saiful and Fevry, Thibault and Alyafeai, Zaid and Dey, Manan and Santilli, Andrea and Sun, Zhiqing and {Ben-David}, Srulik and Xu, Canwen and Chhablani, Gunjan and Wang, Han and Fries, Jason Alan and {Al-shaibani}, Maged S. and Sharma, Shanya and Thakker, Urmish and Almubarak, Khalid and Tang, Xiangru and Radev, Dragomir and Jiang, Mike Tian-Jian and Rush, Alexander M.},
+  year = {2022},
+  month = mar,
+  journal = {arXiv:2202.01279 [cs]},
+  eprint = {2202.01279},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file = {/Users/thesofakillers/Zotero/storage/QEDXYZ8L/Bach et al_2022_PromptSource.pdf;/Users/thesofakillers/Zotero/storage/8RRRQTD5/2202.html}
+}
+
 @article{bahdanauNeuralMachineTranslation2016,
+  ids = {bahdanauNeuralMachineTranslation2016a},
   title = {Neural {{Machine Translation}} by {{Jointly Learning}} to {{Align}} and {{Translate}}},
   author = {Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
   year = {2016},
@@ -36,7 +66,7 @@
   primaryclass = {cs, stat},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,Statistics - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/4X5IFQMF/Bahdanau et al. - 2016 - Neural Machine Translation by Jointly Learning to .pdf;/Users/thesofakillers/Zotero/storage/3SFWNF2Q/1409.html}
+  file = {/Users/thesofakillers/Zotero/storage/4X5IFQMF/Bahdanau et al. - 2016 - Neural Machine Translation by Jointly Learning to .pdf;/Users/thesofakillers/Zotero/storage/J6GGQ4QU/Bahdanau et al_2016_Neural Machine Translation by Jointly Learning to Align and Translate.pdf;/Users/thesofakillers/Zotero/storage/3SFWNF2Q/1409.html;/Users/thesofakillers/Zotero/storage/ZN9KENMJ/1409.html}
 }
 
 @inproceedings{baroniDonCountPredict2014,
@@ -74,6 +104,7 @@
 }
 
 @article{brownLanguageModelsAre2020,
+  ids = {brownLanguageModelsAre2020a},
   title = {Language {{Models}} Are {{Few-Shot Learners}}},
   author = {Brown, Tom B. and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and {Herbert-Voss}, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel M. and Wu, Jeffrey and Winter, Clemens and Hesse, Christopher and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
   year = {2020},
@@ -84,7 +115,7 @@
   primaryclass = {cs},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computation and Language},
-  file = {/Users/thesofakillers/Zotero/storage/SM8EDB9L/Brown et al_2020_Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/3ZTAX4HU/2005.html}
+  file = {/Users/thesofakillers/Zotero/storage/SM8EDB9L/Brown et al_2020_Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/WITCX2CR/Brown et al. - 2020 - Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/3ZTAX4HU/2005.html;/Users/thesofakillers/Zotero/storage/ZVSAR37F/2005.html}
 }
 
 @article{cerqueiraEvaluatingTimeSeries2020,
@@ -265,7 +296,8 @@
   keywords = {Fiction / Science Fiction / General}
 }
 
-@article{hochreiterLongShortTermMemory1997c,
+@article{hochreiterLongShortTermMemory1997,
+  ids = {hochreiterLongShortTermMemory1997a,hochreiterLongShortTermMemory1997c,hochreiterLongShortTermMemory1997d},
   title = {Long {{Short-Term Memory}}},
   author = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
   year = {1997},
@@ -274,9 +306,10 @@
   volume = {9},
   number = {8},
   pages = {1735--1780},
+  publisher = {{MIT Press}},
   issn = {0899-7667},
   doi = {10.1162/neco.1997.9.8.1735},
-  file = {/Users/thesofakillers/Zotero/storage/ECTESAD9/Hochreiter and Schmidhuber - 1997 - Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/HLF37L9Z/Long-Short-Term-Memory.html}
+  file = {/Users/thesofakillers/Zotero/storage/ECTESAD9/Hochreiter and Schmidhuber - 1997 - Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/GRADQTQH/Hochreiter_Schmidhuber_1997_Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/DWQR7EP9/neco.1997.9.8.html;/Users/thesofakillers/Zotero/storage/HLF37L9Z/Long-Short-Term-Memory.html;/Users/thesofakillers/Zotero/storage/NDZTSE5C/6795963.html;/Users/thesofakillers/Zotero/storage/STCBUJ5A/neco.1997.9.8.html}
 }
 
 @misc{informationeso.orgActiveOptics,
@@ -347,6 +380,19 @@
   year = {2020},
   howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/},
   file = {/Users/thesofakillers/Zotero/storage/QBJSUBDC/how-to-get-rich-naval-ravikant.html}
+}
+
+@inproceedings{liuDelayedImpactFair2018,
+  title = {Delayed {{Impact}} of {{Fair Machine Learning}}},
+  booktitle = {Proceedings of the 35th {{International Conference}} on {{Machine Learning}}},
+  author = {Liu, Lydia T. and Dean, Sarah and Rolf, Esther and Simchowitz, Max and Hardt, Moritz},
+  year = {2018},
+  month = jul,
+  pages = {3150--3158},
+  publisher = {{PMLR}},
+  issn = {2640-3498},
+  langid = {english},
+  file = {/Users/thesofakillers/Zotero/storage/FKTDXJVS/Liu et al_2018_Delayed Impact of Fair Machine Learning.pdf;/Users/thesofakillers/Zotero/storage/HSRDS4RI/Liu et al. - 2018 - Delayed Impact of Fair Machine Learning.pdf}
 }
 
 @article{maengEnhancingStratosphericWeather2019,
@@ -436,6 +482,49 @@
   file = {/Users/thesofakillers/Zotero/storage/5BZSEXK4/www.structuredprocrastination.com.html}
 }
 
+@article{raffelExploringLimitsTransfer2020,
+  title = {Exploring the {{Limits}} of {{Transfer Learning}} with a {{Unified Text-to-Text Transformer}}},
+  author = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J.},
+  year = {2020},
+  journal = {Journal of Machine Learning Research},
+  volume = {21},
+  number = {140},
+  pages = {1--67},
+  issn = {1533-7928},
+  file = {/Users/thesofakillers/Zotero/storage/TPZR4RD4/Raffel et al_2020_Exploring the Limits of Transfer Learning with a Unified Text-to-Text.pdf;/Users/thesofakillers/Zotero/storage/9YVHK3RE/text-to-text-transfer-transformer.html}
+}
+
+@inproceedings{ribeiroWhyShouldTrust2016,
+  title = {"{{Why Should I Trust You}}?": {{Explaining}} the {{Predictions}} of {{Any Classifier}}},
+  shorttitle = {"{{Why Should I Trust You}}?},
+  booktitle = {Proceedings of the 22nd {{ACM SIGKDD International Conference}} on {{Knowledge Discovery}} and {{Data Mining}}},
+  author = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
+  year = {2016},
+  month = aug,
+  series = {{{KDD}} '16},
+  pages = {1135--1144},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/2939672.2939778},
+  isbn = {978-1-4503-4232-2},
+  keywords = {black box classifier,explaining machine learning,interpretability,interpretable machine learning},
+  file = {/Users/thesofakillers/Zotero/storage/CF874AGU/Ribeiro et al_2016_Why Should I Trust You.pdf}
+}
+
+@article{sanhMultitaskPromptedTraining2022,
+  title = {Multitask {{Prompted Training Enables Zero-Shot Task Generalization}}},
+  author = {Sanh, Victor and Webson, Albert and Raffel, Colin and Bach, Stephen H. and Sutawika, Lintang and Alyafeai, Zaid and Chaffin, Antoine and Stiegler, Arnaud and Scao, Teven Le and Raja, Arun and Dey, Manan and Bari, M. Saiful and Xu, Canwen and Thakker, Urmish and Sharma, Shanya Sharma and Szczechla, Eliza and Kim, Taewoon and Chhablani, Gunjan and Nayak, Nihal and Datta, Debajyoti and Chang, Jonathan and Jiang, Mike Tian-Jian and Wang, Han and Manica, Matteo and Shen, Sheng and Yong, Zheng Xin and Pandey, Harshit and Bawden, Rachel and Wang, Thomas and Neeraj, Trishala and Rozen, Jos and Sharma, Abheesht and Santilli, Andrea and Fevry, Thibault and Fries, Jason Alan and Teehan, Ryan and Bers, Tali and Biderman, Stella and Gao, Leo and Wolf, Thomas and Rush, Alexander M.},
+  year = {2022},
+  month = mar,
+  journal = {arXiv:2110.08207 [cs]},
+  eprint = {2110.08207},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
+  file = {/Users/thesofakillers/Zotero/storage/A2TII2LP/Sanh et al_2022_Multitask Prompted Training Enables Zero-Shot Task Generalization.pdf;/Users/thesofakillers/Zotero/storage/BCK8D284/2110.html}
+}
+
 @article{sarazinESODifferentialImage1990,
   title = {The {{ESO}} Differential Image Motion Monitor},
   author = {Sarazin, M. and Roddier, F.},
@@ -507,6 +596,7 @@
 }
 
 @article{vaswaniAttentionAllYou2017a,
+  ids = {vaswaniAttentionAllYou2017,vaswaniAttentionAllYou2017b},
   title = {Attention {{Is All You Need}}},
   author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
   year = {2017},
@@ -517,7 +607,7 @@
   primaryclass = {cs},
   archiveprefix = {arXiv},
   keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/REJG7MK8/Vaswani et al. - 2017 - Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/EXQJI2IJ/1706.html}
+  file = {/Users/thesofakillers/Zotero/storage/3BTBLEKW/Vaswani et al_2017_Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/833PWTK7/Vaswani et al_2017_Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/REJG7MK8/Vaswani et al. - 2017 - Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/EXQJI2IJ/1706.html;/Users/thesofakillers/Zotero/storage/V4VIC3VK/1706.html;/Users/thesofakillers/Zotero/storage/WNA6HCQ7/1706.html}
 }
 
 @misc{WhatJetStream,
