--- a/2021-12-19t18-09-02z.md
+++ b/2021-12-19t18-09-02z.md
@@ -10,7 +10,7 @@ generating language given some starting point. We have different kinds of
 language generation:
 
 - dialogue modeling
-- question answering
+- [question answering](./2022-07-04t15-57-28z.md)
 - machine translation
 - [summarisation](./2021-12-19t18-10-39z.md)
 - and others
