--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -1,5 +1,5 @@
 
-@article{agrawalMachineLearningPrecipitation2019,
+@article{agrawal_machine_2019,
   title = {Machine {{Learning}} for {{Precipitation Nowcasting}} from {{Radar Images}}},
   author = {Agrawal, Shreya and Barrington, Luke and Bromberg, Carla and Burge, John and Gazen, Cenk and Hickey, Jason},
   year = {2019},
@@ -9,11 +9,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs, stat},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/MJ38L26Q/Agrawal et al_2019_Machine Learning for Precipitation Nowcasting from Radar Images.pdf;/Users/thesofakillers/Zotero/storage/S7JESKIG/1912.html}
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning}
 }
 
-@book{ahrensHowTakeSmart2017,
+@book{ahrens_how_2017,
   title = {How to {{Take Smart Notes}}: {{One Simple Technique}} to {{Boost Writing}}, {{Learning}} and {{Thinking}} \textendash{} for {{Students}}, {{Academics}} and {{Nonfiction Book Writers}}},
   shorttitle = {How to {{Take Smart Notes}}},
   author = {Ahrens, S{\"o}nke},
@@ -25,7 +24,7 @@
   keywords = {Reference / Writing Skills,Self-Help / Personal Growth / Memory Improvement,Self-Help / Self-Management / Time Management,Study Aids / Book Notes}
 }
 
-@inproceedings{antoniakBadSeedsEvaluating2021,
+@inproceedings{antoniak_bad_2021,
   title = {Bad {{Seeds}}: {{Evaluating Lexical Methods}} for {{Bias Measurement}}},
   shorttitle = {Bad {{Seeds}}},
   booktitle = {Proceedings of the 59th {{Annual Meeting}} of the {{Association}} for {{Computational Linguistics}} and the 11th {{International Joint Conference}} on {{Natural Language Processing}} ({{Volume}} 1: {{Long Papers}})},
@@ -35,11 +34,10 @@
   pages = {1889--1904},
   publisher = {{Association for Computational Linguistics}},
   address = {{Online}},
-  doi = {10.18653/v1/2021.acl-long.148},
-  file = {/Users/thesofakillers/Zotero/storage/VDUBRC22/Antoniak_Mimno_2021_Bad Seeds.pdf}
+  doi = {10.18653/v1/2021.acl-long.148}
 }
 
-@article{bachPromptSourceIntegratedDevelopment2022,
+@article{bach_promptsource_2022,
   title = {{{PromptSource}}: {{An Integrated Development Environment}} and {{Repository}} for {{Natural Language Prompts}}},
   shorttitle = {{{PromptSource}}},
   author = {Bach, Stephen H. and Sanh, Victor and Yong, Zheng-Xin and Webson, Albert and Raffel, Colin and Nayak, Nihal V. and Sharma, Abheesht and Kim, Taewoon and Bari, M. Saiful and Fevry, Thibault and Alyafeai, Zaid and Dey, Manan and Santilli, Andrea and Sun, Zhiqing and {Ben-David}, Srulik and Xu, Canwen and Chhablani, Gunjan and Wang, Han and Fries, Jason Alan and {Al-shaibani}, Maged S. and Sharma, Shanya and Thakker, Urmish and Almubarak, Khalid and Tang, Xiangru and Radev, Dragomir and Jiang, Mike Tian-Jian and Rush, Alexander M.},
@@ -50,11 +48,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/QEDXYZ8L/Bach et al_2022_PromptSource.pdf;/Users/thesofakillers/Zotero/storage/8RRRQTD5/2202.html}
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,PromptSource paper}
 }
 
-@article{bahdanauNeuralMachineTranslation2016,
+@article{bahdanau_neural_2016,
   ids = {bahdanauNeuralMachineTranslation2016a},
   title = {Neural {{Machine Translation}} by {{Jointly Learning}} to {{Align}} and {{Translate}}},
   author = {Bahdanau, Dzmitry and Cho, Kyunghyun and Bengio, Yoshua},
@@ -65,11 +62,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs, stat},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,Statistics - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/4X5IFQMF/Bahdanau et al. - 2016 - Neural Machine Translation by Jointly Learning to .pdf;/Users/thesofakillers/Zotero/storage/J6GGQ4QU/Bahdanau et al_2016_Neural Machine Translation by Jointly Learning to Align and Translate.pdf;/Users/thesofakillers/Zotero/storage/3SFWNF2Q/1409.html;/Users/thesofakillers/Zotero/storage/ZN9KENMJ/1409.html}
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Neural and Evolutionary Computing,Statistics - Machine Learning}
 }
 
-@inproceedings{baroniDonCountPredict2014,
+@inproceedings{baroni_dont_2014,
   title = {Don't Count, Predict! {{A}} Systematic Comparison of Context-Counting vs. Context-Predicting Semantic Vectors},
   booktitle = {Proceedings of the 52nd {{Annual Meeting}} of the {{Association}} for {{Computational Linguistics}} ({{Volume}} 1: {{Long Papers}})},
   author = {Baroni, Marco and Dinu, Georgiana and Kruszewski, Germ{\'a}n},
@@ -78,20 +74,18 @@
   pages = {238--247},
   publisher = {{Association for Computational Linguistics}},
   address = {{Baltimore, Maryland}},
-  doi = {10.3115/v1/P14-1023},
-  file = {/Users/thesofakillers/Zotero/storage/PYW5WKUM/Baroni et al. - 2014 - Don't count, predict! A systematic comparison of c.pdf}
+  doi = {10.3115/v1/P14-1023}
 }
 
-@misc{beckerKalmanFilterTutorial2018,
+@misc{becker_kalman_2018,
   title = {Kalman {{Filter Tutorial}}},
   author = {Becker, Alex},
   year = {2018},
   howpublished = {https://www.kalmanfilter.net/},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/5ISAE5L3/default.html}
+  langid = {english}
 }
 
-@misc{bellForecastingUberIntroduction2018,
+@misc{bell_forecasting_2018,
   title = {Forecasting at {{Uber}}: {{An Introduction}}},
   shorttitle = {Forecasting at {{Uber}}},
   author = {Bell, Franziska and Smyl, Slawek},
@@ -99,11 +93,10 @@
   month = sep,
   journal = {Uber Engineering Blog},
   howpublished = {https://eng.uber.com/forecasting-introduction/},
-  langid = {american},
-  file = {/Users/thesofakillers/Zotero/storage/ZRRHXHN7/forecasting-introduction.html}
+  langid = {american}
 }
 
-@article{brownLanguageModelsAre2020,
+@article{brown_language_2020,
   ids = {brownLanguageModelsAre2020a},
   title = {Language {{Models}} Are {{Few-Shot Learners}}},
   author = {Brown, Tom B. and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and Agarwal, Sandhini and {Herbert-Voss}, Ariel and Krueger, Gretchen and Henighan, Tom and Child, Rewon and Ramesh, Aditya and Ziegler, Daniel M. and Wu, Jeffrey and Winter, Clemens and Hesse, Christopher and Chen, Mark and Sigler, Eric and Litwin, Mateusz and Gray, Scott and Chess, Benjamin and Clark, Jack and Berner, Christopher and McCandlish, Sam and Radford, Alec and Sutskever, Ilya and Amodei, Dario},
@@ -114,11 +107,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language},
-  file = {/Users/thesofakillers/Zotero/storage/SM8EDB9L/Brown et al_2020_Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/WITCX2CR/Brown et al. - 2020 - Language Models are Few-Shot Learners.pdf;/Users/thesofakillers/Zotero/storage/3ZTAX4HU/2005.html;/Users/thesofakillers/Zotero/storage/ZVSAR37F/2005.html}
+  keywords = {Computer Science - Computation and Language,gpt,gpt-3,gpt3}
 }
 
-@article{cerqueiraEvaluatingTimeSeries2020,
+@article{cerqueira_evaluating_2020,
   title = {Evaluating Time Series Forecasting Models: {{An}} Empirical Study on Performance Estimation Methods},
   shorttitle = {Evaluating Time Series Forecasting Models},
   author = {Cerqueira, Vitor and Torgo, Luis and Mozetic, Igor},
@@ -133,22 +125,33 @@
   issn = {0885-6125, 1573-0565},
   doi = {10.1007/s10994-020-05910-7},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/YCM2EPZM/Cerqueira et al. - 2020 - Evaluating time series forecasting models An empi.pdf;/Users/thesofakillers/Zotero/storage/GCWUBRLY/1905.html}
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning}
 }
 
-@inproceedings{chandorkarDynamicTimeLag2019,
+@inproceedings{chandorkar_dynamic_2019,
   title = {Dynamic {{Time Lag Regression}}: {{Predicting What}} \& {{When}}},
   shorttitle = {Dynamic {{Time Lag Regression}}},
   booktitle = {International {{Conference}} on {{Learning Representations}}},
   author = {Chandorkar, Mandar and Furtlehner, Cyril and Poduval, Bala and Camporeale, Enrico and Sebag, Michele},
   year = {2019},
   month = sep,
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/LIJ9XN76/Chandorkar et al. - 2019 - Dynamic Time Lag Regression Predicting What & Whe.pdf;/Users/thesofakillers/Zotero/storage/5HKKV2AJ/forum.html}
+  langid = {english}
 }
 
-@article{friedStatisticsGeometricRepresentation1965,
+@inproceedings{devlin_bert_2019,
+  title = {{{BERT}}: {{Pre-training}} of {{Deep Bidirectional Transformers}} for {{Language Understanding}}},
+  shorttitle = {{{BERT}}},
+  booktitle = {Proceedings of the 2019 {{Conference}} of the {{North American Chapter}} of the {{Association}} for {{Computational Linguistics}}: {{Human Language Technologies}}, {{Volume}} 1 ({{Long}} and {{Short Papers}})},
+  author = {Devlin, Jacob and Chang, Ming-Wei and Lee, Kenton and Toutanova, Kristina},
+  year = {2019},
+  month = jun,
+  pages = {4171--4186},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Minneapolis, Minnesota}},
+  doi = {10.18653/v1/N19-1423}
+}
+
+@article{fried_statistics_1965,
   title = {Statistics of a {{Geometric Representation}} of {{Wavefront Distortion}}},
   author = {Fried, D. L.},
   year = {1965},
@@ -161,11 +164,10 @@
   doi = {10.1364/JOSA.55.001427},
   copyright = {\&\#169; 1965 Optical Society of America},
   langid = {english},
-  keywords = {Atmospheric turbulence,Inhomogeneous optical media,Optical systems,Wave propagation,Wavefront distortions,Wavefronts},
-  file = {/Users/thesofakillers/Zotero/storage/VRRDGXZS/Fried_1965_Statistics of a Geometric Representation of Wavefront Distortion.pdf;/Users/thesofakillers/Zotero/storage/89UBAX22/abstract.html}
+  keywords = {Atmospheric turbulence,Inhomogeneous optical media,Optical systems,Wave propagation,Wavefront distortions,Wavefronts}
 }
 
-@article{gersLearningForgetContinual2000,
+@article{gers_learning_2000,
   title = {Learning to {{Forget}}: {{Continual Prediction}} with {{LSTM}}},
   shorttitle = {Learning to {{Forget}}},
   author = {Gers, Felix A. and Schmidhuber, J{\"u}rgen and Cummins, Fred},
@@ -176,11 +178,10 @@
   number = {10},
   pages = {2451--2471},
   issn = {0899-7667},
-  doi = {10.1162/089976600300015015},
-  file = {/Users/thesofakillers/Zotero/storage/3K4YWEGF/Gers et al. - 2000 - Learning to Forget Continual Prediction with LSTM.pdf;/Users/thesofakillers/Zotero/storage/HQAZ3FFE/Learning-to-Forget-Continual-Prediction-with-LSTM.html}
+  doi = {10.1162/089976600300015015}
 }
 
-@techreport{goldmanBasicsHypothesisTests2018,
+@techreport{goldman_basics_2018,
   title = {The {{Basics}} of {{Hypothesis Tests}} and {{Their Interpretations}}},
   author = {Goldman, Daniel S.},
   year = {2018},
@@ -188,39 +189,35 @@
   journal = {OSF Preprints},
   number = {u2csn},
   institution = {{Center for Open Science}},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/UNK8QZN9/Goldman_2018_The Basics of Hypothesis Tests and Their Interpretations.pdf;/Users/thesofakillers/Zotero/storage/MPV89UFQ/u2csn.html}
+  langid = {english}
 }
 
-@misc{gollwitzerImperativeVsDeclarative2020,
+@misc{gollwitzer_imperative_2020,
   title = {Imperative vs. {{Declarative Programming}} (Procedural, Functional, and {{OOP}})},
   author = {Gollwitzer, Zach},
   year = {2020},
   month = jan,
   journal = {Medium},
   howpublished = {https://medium.com/@zach.gollwitzer/imperative-vs-declarative-programming-procedural-functional-and-oop-b03a53ba745c},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/N3HWPZEZ/imperative-vs-declarative-programming-procedural-functional-and-oop-b03a53ba745c.html}
+  langid = {english}
 }
 
-@misc{grahamKeepYourIdentity2009,
+@misc{graham_keep_2009,
   title = {Keep {{Your Identity Small}}},
   author = {Graham, Paul},
   year = {2009},
   month = feb,
   journal = {Paul Graham},
-  howpublished = {http://www.paulgraham.com/identity.html},
-  file = {/Users/thesofakillers/Zotero/storage/IRXTCNYN/identity.html}
+  howpublished = {http://www.paulgraham.com/identity.html}
 }
 
-@misc{grahamSchlepBlindness,
+@misc{graham_schlep_nodate,
   title = {Schlep {{Blindness}}},
   author = {Graham, Paul},
-  howpublished = {http://www.paulgraham.com/schlep.html},
-  file = {/Users/thesofakillers/Zotero/storage/X4R7ZR82/schlep.html}
+  howpublished = {http://www.paulgraham.com/schlep.html}
 }
 
-@article{grangerInvestigatingCausalRelations1969,
+@article{granger_investigating_1969,
   title = {Investigating {{Causal Relations}} by {{Econometric Models}} and {{Cross-spectral Methods}}},
   author = {Granger, C. W. J.},
   year = {1969},
@@ -230,11 +227,10 @@
   pages = {424--438},
   publisher = {{[Wiley, Econometric Society]}},
   issn = {0012-9682},
-  doi = {10.2307/1912791},
-  file = {/Users/thesofakillers/Zotero/storage/K2QG69KW/Granger - 1969 - Investigating Causal Relations by Econometric Mode.pdf}
+  doi = {10.2307/1912791}
 }
 
-@inproceedings{groverDeepHybridModel2015,
+@inproceedings{grover_deep_2015,
   title = {A {{Deep Hybrid Model}} for {{Weather Forecasting}}},
   booktitle = {Proceedings of the 21th {{ACM SIGKDD International Conference}} on {{Knowledge Discovery}} and {{Data Mining}}},
   author = {Grover, Aditya and Kapoor, Ashish and Horvitz, Eric},
@@ -246,11 +242,10 @@
   address = {{New York, NY, USA}},
   doi = {10.1145/2783258.2783275},
   isbn = {978-1-4503-3664-2},
-  keywords = {_tablet,deep learning,gaussian processes,graphical models,machine learning,weather forecasting},
-  file = {/Users/thesofakillers/Zotero/storage/KGIAJZB2/Grover et al_2015_A Deep Hybrid Model for Weather Forecasting.pdf}
+  keywords = {deep learning,gaussian processes,graphical models,machine learning,weather forecasting}
 }
 
-@inproceedings{guesalagaFASSFullAperture2016,
+@inproceedings{guesalaga_fass_2016,
   title = {{{FASS}}: The Full Aperture Seeing Sensor},
   shorttitle = {{{FASS}}},
   booktitle = {Adaptive {{Optics Systems V}}},
@@ -260,31 +255,28 @@
   volume = {9909},
   pages = {99090H},
   publisher = {{International Society for Optics and Photonics}},
-  doi = {10.1117/12.2232012},
-  file = {/Users/thesofakillers/Zotero/storage/XPG5D7Q2/Guesalaga et al. - 2016 - FASS the full aperture seeing sensor.pdf;/Users/thesofakillers/Zotero/storage/ECAGP3KH/12.2232012.html}
+  doi = {10.1117/12.2232012}
 }
 
-@article{hagelinOpticalTurbulenceInfluence2010,
+@article{hagelin_optical_2010,
   title = {Optical {{Turbulence The}} Influence of the Atmosphere on Ground-Based Astronomy},
   author = {Hagelin, S and Masciadri, E and Lascaux, F},
   year = {2010},
   month = aug,
   journal = {ESA Earth Observation Summer School},
   pages = {1},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/UCMUCHXE/Hagelin et al. - The influence of the atmosphere on ground-based as.pdf}
+  langid = {english}
 }
 
-@misc{hambergGTD15Minutes2010,
+@misc{hamberg_gtd_2010,
   title = {{{GTD}} in 15 Minutes \textendash{} {{A Pragmatic Guide}} to {{Getting Things Done}}},
   author = {Hamberg, Erlend},
   year = {2010},
   month = aug,
-  howpublished = {https://hamberg.no/gtd/},
-  file = {/Users/thesofakillers/Zotero/storage/RUWU7JKD/gtd.html}
+  howpublished = {https://hamberg.no/gtd/}
 }
 
-@book{herbertDune40thAnniversary2005,
+@book{herbert_dune_2005,
   title = {Dune (40th {{Anniversary Edition}})},
   author = {Herbert, Frank},
   year = {2005},
@@ -296,7 +288,7 @@
   keywords = {Fiction / Science Fiction / General}
 }
 
-@article{hochreiterLongShortTermMemory1997,
+@article{hochreiter_long_1997,
   ids = {hochreiterLongShortTermMemory1997a,hochreiterLongShortTermMemory1997c,hochreiterLongShortTermMemory1997d},
   title = {Long {{Short-Term Memory}}},
   author = {Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
@@ -308,27 +300,24 @@
   pages = {1735--1780},
   publisher = {{MIT Press}},
   issn = {0899-7667},
-  doi = {10.1162/neco.1997.9.8.1735},
-  file = {/Users/thesofakillers/Zotero/storage/ECTESAD9/Hochreiter and Schmidhuber - 1997 - Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/GRADQTQH/Hochreiter_Schmidhuber_1997_Long Short-Term Memory.pdf;/Users/thesofakillers/Zotero/storage/DWQR7EP9/neco.1997.9.8.html;/Users/thesofakillers/Zotero/storage/HLF37L9Z/Long-Short-Term-Memory.html;/Users/thesofakillers/Zotero/storage/NDZTSE5C/6795963.html;/Users/thesofakillers/Zotero/storage/STCBUJ5A/neco.1997.9.8.html}
+  doi = {10.1162/neco.1997.9.8.1735}
 }
 
-@misc{informationeso.orgActiveOptics,
+@misc{informationesoorg_active_nodate,
   title = {Active {{Optics}}},
   author = {{information@eso.org}},
   howpublished = {https://www.eso.org/public/teles-instr/technology/active\_optics/},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/NE4SAEIJ/active_optics.html}
+  langid = {english}
 }
 
-@misc{informationeso.orgAdaptiveOptics,
+@misc{informationesoorg_adaptive_nodate,
   title = {Adaptive {{Optics}}},
   author = {{information@eso.org}},
   howpublished = {https://www.eso.org/public/teles-instr/technology/adaptive\_optics/},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/VFZH7QPN/adaptive_optics.html}
+  langid = {english}
 }
 
-@article{innesDonUnrollAdjoint2019,
+@article{innes_dont_2019,
   title = {Don't {{Unroll Adjoint}}: {{Differentiating SSA-Form Programs}}},
   shorttitle = {Don't {{Unroll Adjoint}}},
   author = {Innes, Michael},
@@ -339,30 +328,18 @@
   eprinttype = {arxiv},
   primaryclass = {cs},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Programming Languages},
-  file = {/Users/thesofakillers/Zotero/storage/93FEGAEF/Innes - 2019 - Don't Unroll Adjoint Differentiating SSA-Form Pro.pdf;/Users/thesofakillers/Zotero/storage/U5255XA7/1810.html}
+  keywords = {Computer Science - Programming Languages}
 }
 
-@misc{innesWhatDifferentiableProgramming2019,
+@misc{innes_what_2019,
   title = {What {{Is Differentiable Programming}}?},
   author = {Innes, Mark},
   year = {2019},
   month = jul,
-  howpublished = {https://fluxml.ai/2019/02/07/what-is-differentiable-programming.html},
-  file = {/Users/thesofakillers/Zotero/storage/VKPXS79G/what-is-differentiable-programming.html}
+  howpublished = {https://fluxml.ai/2019/02/07/what-is-differentiable-programming.html}
 }
 
-@article{JetStream2020,
-  title = {Jet Stream},
-  year = {2020},
-  month = aug,
-  journal = {Wikipedia},
-  copyright = {Creative Commons Attribution-ShareAlike License},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/BPI5GEHI/index.html}
-}
-
-@inproceedings{kapoorAirplanesAloftSensor2014,
+@inproceedings{kapoor_airplanes_2014,
   title = {Airplanes Aloft as a Sensor Network for Wind Forecasting},
   booktitle = {{{IPSN-14 Proceedings}} of the 13th {{International Symposium}} on {{Information Processing}} in {{Sensor Networks}}},
   author = {Kapoor, Ashish and Horvitz, Zachary and Laube, Spencer and Horvitz, Eric},
@@ -370,19 +347,30 @@
   month = apr,
   pages = {25--33},
   doi = {10.1109/IPSN.2014.6846738},
-  keywords = {_tablet,aircraft,airplanes,Airplanes,Atmospheric modeling,atmospheric techniques,balloons,commercial aircraft,geophysics computing,inference mechanisms,inference methods,instrumented high-altitude balloon,Kernel,large-scale sensor network,learned predictive model,learning (artificial intelligence),machine learning,Mathematical model,value-of-information analyses,weather forecasting,weather phenomena observation,wind,wind forecasting,Wind forecasting},
-  file = {/Users/thesofakillers/Zotero/storage/GCFRSQJ5/Kapoor et al_2014_Airplanes aloft as a sensor network for wind forecasting.pdf;/Users/thesofakillers/Zotero/storage/JL7IP2DF/6846738.html}
+  keywords = {aircraft,airplanes,Airplanes,Atmospheric modeling,atmospheric techniques,balloons,commercial aircraft,geophysics computing,inference mechanisms,inference methods,instrumented high-altitude balloon,Kernel,large-scale sensor network,learned predictive model,learning (artificial intelligence),machine learning,Mathematical model,value-of-information analyses,weather forecasting,weather phenomena observation,wind,wind forecasting,Wind forecasting}
 }
 
-@misc{kowalksiHowGetRich2020,
+@misc{kowalksi_how_2020,
   title = {How to {{Get Rich}} by {{Naval Ravikant}} ({{Detailed Summary}} + {{Infographic}}) | {{Sloww}}},
   author = {Kowalksi, Kyle},
   year = {2020},
-  howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/},
-  file = {/Users/thesofakillers/Zotero/storage/QBJSUBDC/how-to-get-rich-naval-ravikant.html}
+  howpublished = {https://www.sloww.co/how-to-get-rich-naval-ravikant/}
 }
 
-@inproceedings{liuDelayedImpactFair2018,
+@inproceedings{lester_power_2021,
+  title = {The {{Power}} of {{Scale}} for {{Parameter-Efficient Prompt Tuning}}},
+  booktitle = {Proceedings of the 2021 {{Conference}} on {{Empirical Methods}} in {{Natural Language Processing}}},
+  author = {Lester, Brian and {Al-Rfou}, Rami and Constant, Noah},
+  year = {2021},
+  month = nov,
+  pages = {3045--3059},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Online and Punta Cana, Dominican Republic}},
+  doi = {10.18653/v1/2021.emnlp-main.243},
+  keywords = {T5+LM paper}
+}
+
+@inproceedings{liu_delayed_2018,
   title = {Delayed {{Impact}} of {{Fair Machine Learning}}},
   booktitle = {Proceedings of the 35th {{International Conference}} on {{Machine Learning}}},
   author = {Liu, Lydia T. and Dean, Sarah and Rolf, Esther and Simchowitz, Max and Hardt, Moritz},
@@ -391,11 +379,10 @@
   pages = {3150--3158},
   publisher = {{PMLR}},
   issn = {2640-3498},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/FKTDXJVS/Liu et al_2018_Delayed Impact of Fair Machine Learning.pdf;/Users/thesofakillers/Zotero/storage/HSRDS4RI/Liu et al. - 2018 - Delayed Impact of Fair Machine Learning.pdf}
+  langid = {english}
 }
 
-@article{maengEnhancingStratosphericWeather2019,
+@article{maeng_enhancing_2019,
   title = {Enhancing {{Stratospheric Weather Analyses}} and {{Forecasts}} by {{Deploying Sensors}} from a {{Weather Balloon}}},
   author = {Maeng, Kiwan and Kushan, Iskender and Lucia, Brandon and Kapoor, Ashish},
   year = {2019},
@@ -405,11 +392,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs, stat},
   archiveprefix = {arXiv},
-  keywords = {_tablet,Computer Science - Machine Learning,Statistics - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/BSYY79M3/Maeng et al_2019_Enhancing Stratospheric Weather Analyses and Forecasts by Deploying Sensors.pdf;/Users/thesofakillers/Zotero/storage/8WNHHJTC/1912.html}
+  keywords = {Computer Science - Machine Learning,Statistics - Machine Learning}
 }
 
-@article{milliNowcastingTurbulenceParanal2019,
+@article{milli_nowcasting_2019,
   title = {Nowcasting the Turbulence at the {{Paranal Observatory}}},
   author = {Milli, J. and Gonzalez, R. and Fluxa, P. R. and Chacon, A. and Navarette, J. and Sarazin, M. and Pena, E. and {Carrasco-Davis}, R. and Solarz, A. and Smoker, J. and Martayan, C. and Melo, C. and Sedaghati, E. and Mieske, S. and Hainaut, O. and {Tacconi-Garman}, L.},
   year = {2019},
@@ -419,11 +405,10 @@
   eprinttype = {arxiv},
   primaryclass = {astro-ph, physics:physics},
   archiveprefix = {arXiv},
-  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Atmospheric and Oceanic Physics},
-  file = {/Users/thesofakillers/Zotero/storage/V4VPWUKH/Milli et al_2019_Nowcasting the turbulence at the Paranal Observatory.pdf;/Users/thesofakillers/Zotero/storage/9UP6XSYR/1910.html}
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics,Physics - Atmospheric and Oceanic Physics}
 }
 
-@misc{mullerSuccessLuckHard2020,
+@misc{muller_is_2020,
   title = {Is {{Success Luck}} or {{Hard Work}}?},
   author = {Muller, Derek},
   year = {2020},
@@ -431,7 +416,21 @@
   publisher = {{Veritasium}}
 }
 
-@article{novatiAutomatingTurbulenceModelling2021,
+@article{noauthor_jet_2020,
+  title = {Jet Stream},
+  year = {2020},
+  month = aug,
+  journal = {Wikipedia},
+  copyright = {Creative Commons Attribution-ShareAlike License},
+  langid = {english}
+}
+
+@misc{noauthor_what_nodate-1,
+  title = {What {{Is}} the {{Jet Stream}}? | {{NOAA SciJinks}} \textendash{} {{All About Weather}}},
+  howpublished = {https://scijinks.gov/jet-stream/}
+}
+
+@article{novati_automating_2021,
   title = {Automating Turbulence Modelling by Multi-Agent Reinforcement Learning},
   author = {Novati, Guido and {de Laroussilhe}, Hugues Lascombes and Koumoutsakos, Petros},
   year = {2021},
@@ -442,11 +441,10 @@
   issn = {2522-5839},
   doi = {10.1038/s42256-020-00272-0},
   copyright = {2021 The Author(s), under exclusive licence to Springer Nature Limited},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/NUQYDM2S/Novati et al. - 2021 - Automating turbulence modelling by multi-agent rei.pdf;/Users/thesofakillers/Zotero/storage/X82SCHV3/s42256-020-00272-0.html}
+  langid = {english}
 }
 
-@article{osbornAtmosphericScintillationAstronomical2015,
+@article{osborn_atmospheric_2015,
   title = {Atmospheric Scintillation in Astronomical Photometry},
   author = {Osborn, J. and F{\"o}hring, D. and Dhillon, V. S. and Wilson, R. W.},
   year = {2015},
@@ -458,11 +456,10 @@
   publisher = {{Oxford Academic}},
   issn = {0035-8711},
   doi = {10.1093/mnras/stv1400},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/9NTJBHBH/Osborn et al_2015_Atmospheric scintillation in astronomical photometry.pdf;/Users/thesofakillers/Zotero/storage/NYLDPERG/1067913.html}
+  langid = {english}
 }
 
-@article{pedersenSeeingMeasurementsDifferential1988,
+@article{pedersen_seeing_1988,
   title = {Seeing Measurements with a Differential Image Motion Monitor.},
   author = {Pedersen, H. and Rigaut, F. and Sarazin, M.},
   year = {1988},
@@ -470,19 +467,24 @@
   journal = {The Messenger},
   volume = {53},
   pages = {8--9},
-  keywords = {Auxiliary Instrumentation:Seeing,Methods of Observation:Seeing,Seeing:Auxiliary Instrumentation,Seeing:Methods of Observation},
-  file = {/Users/thesofakillers/Zotero/storage/URGWUDJU/Pedersen et al_1988_Seeing measurements with a differential image motion monitor.pdf}
+  keywords = {Auxiliary Instrumentation:Seeing,Methods of Observation:Seeing,Seeing:Auxiliary Instrumentation,Seeing:Methods of Observation}
 }
 
-@misc{perryStructuredProcrastination2006,
+@misc{perry_structured_2006,
   title = {Structured {{Procrastination}}},
   author = {Perry, John},
   year = {2006},
-  howpublished = {http://www.structuredprocrastination.com/},
-  file = {/Users/thesofakillers/Zotero/storage/5BZSEXK4/www.structuredprocrastination.com.html}
+  howpublished = {http://www.structuredprocrastination.com/}
 }
 
-@article{raffelExploringLimitsTransfer2020,
+@article{radford_language_2019,
+  title = {Language Models Are Unsupervised Multitask Learners},
+  author = {Radford, Alec and Wu, Jeff and Child, Rewon and Luan, David and Amodei, Dario and Sutskever, Ilya},
+  year = {2019},
+  keywords = {gpt,gpt-2,gpt2}
+}
+
+@article{raffel_exploring_2020,
   title = {Exploring the {{Limits}} of {{Transfer Learning}} with a {{Unified Text-to-Text Transformer}}},
   author = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J.},
   year = {2020},
@@ -491,10 +493,10 @@
   number = {140},
   pages = {1--67},
   issn = {1533-7928},
-  file = {/Users/thesofakillers/Zotero/storage/TPZR4RD4/Raffel et al_2020_Exploring the Limits of Transfer Learning with a Unified Text-to-Text.pdf;/Users/thesofakillers/Zotero/storage/9YVHK3RE/text-to-text-transfer-transformer.html}
+  keywords = {T5}
 }
 
-@inproceedings{ribeiroWhyShouldTrust2016,
+@inproceedings{ribeiro_why_2016,
   title = {"{{Why Should I Trust You}}?": {{Explaining}} the {{Predictions}} of {{Any Classifier}}},
   shorttitle = {"{{Why Should I Trust You}}?},
   booktitle = {Proceedings of the 22nd {{ACM SIGKDD International Conference}} on {{Knowledge Discovery}} and {{Data Mining}}},
@@ -507,11 +509,10 @@
   address = {{New York, NY, USA}},
   doi = {10.1145/2939672.2939778},
   isbn = {978-1-4503-4232-2},
-  keywords = {black box classifier,explaining machine learning,interpretability,interpretable machine learning},
-  file = {/Users/thesofakillers/Zotero/storage/CF874AGU/Ribeiro et al_2016_Why Should I Trust You.pdf}
+  keywords = {black box classifier,explaining machine learning,interpretability,interpretable machine learning}
 }
 
-@article{sanhMultitaskPromptedTraining2022,
+@article{sanh_multitask_2022,
   title = {Multitask {{Prompted Training Enables Zero-Shot Task Generalization}}},
   author = {Sanh, Victor and Webson, Albert and Raffel, Colin and Bach, Stephen H. and Sutawika, Lintang and Alyafeai, Zaid and Chaffin, Antoine and Stiegler, Arnaud and Scao, Teven Le and Raja, Arun and Dey, Manan and Bari, M. Saiful and Xu, Canwen and Thakker, Urmish and Sharma, Shanya Sharma and Szczechla, Eliza and Kim, Taewoon and Chhablani, Gunjan and Nayak, Nihal and Datta, Debajyoti and Chang, Jonathan and Jiang, Mike Tian-Jian and Wang, Han and Manica, Matteo and Shen, Sheng and Yong, Zheng Xin and Pandey, Harshit and Bawden, Rachel and Wang, Thomas and Neeraj, Trishala and Rozen, Jos and Sharma, Abheesht and Santilli, Andrea and Fevry, Thibault and Fries, Jason Alan and Teehan, Ryan and Bers, Tali and Biderman, Stella and Gao, Leo and Wolf, Thomas and Rush, Alexander M.},
   year = {2022},
@@ -521,11 +522,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/A2TII2LP/Sanh et al_2022_Multitask Prompted Training Enables Zero-Shot Task Generalization.pdf;/Users/thesofakillers/Zotero/storage/BCK8D284/2110.html}
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,T0}
 }
 
-@article{sarazinESODifferentialImage1990,
+@article{sarazin_eso_1990,
   title = {The {{ESO}} Differential Image Motion Monitor},
   author = {Sarazin, M. and Roddier, F.},
   year = {1990},
@@ -534,11 +534,10 @@
   volume = {227},
   pages = {294--300},
   issn = {0004-6361},
-  keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes},
-  file = {/Users/thesofakillers/Zotero/storage/AVVPS25Z/Sarazin_Roddier_1990_The ESO differential image motion monitor.pdf}
+  keywords = {Earth Atmosphere,Error Analysis,Image Motion Compensation,Optical Properties,Performance Tests,Perturbation Theory,Site Selection,Telescopes}
 }
 
-@misc{smylM4ForecastingCompetition2018,
+@misc{smyl_m4_2018,
   title = {M4 {{Forecasting Competition}}: {{Introducing}} a {{New Hybrid ES-RNN Model}}},
   shorttitle = {M4 {{Forecasting Competition}}},
   author = {Smyl, Slawek and Ranganathan, Jai and Pasqua, Andrea},
@@ -546,41 +545,37 @@
   month = jun,
   journal = {Uber Engineering Blog},
   howpublished = {https://eng.uber.com/m4-forecasting-competition/},
-  langid = {american},
-  file = {/Users/thesofakillers/Zotero/storage/9W5R8GT2/m4-forecasting-competition.html}
+  langid = {american}
 }
 
-@misc{spurveyFourWaysReprogram2016,
+@misc{spurvey_four_2016,
   title = {Four {{Ways}} to {{Reprogram Your Subconscious Mind}}},
   author = {Spurvey, Chris},
   year = {2016},
   month = dec,
   journal = {Medium},
   howpublished = {https://medium.com/@chrisspurvey/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c},
-  langid = {english},
-  file = {/Users/thesofakillers/Zotero/storage/EZQQS9QK/four-ways-to-reprogram-your-subconscious-mind-24581e111d3c.html}
+  langid = {english}
 }
 
-@inproceedings{szegedyGoingDeeperConvolutions2015,
+@inproceedings{szegedy_going_2015,
   title = {Going {{Deeper With Convolutions}}},
   booktitle = {Proceedings of the {{IEEE Conference}} on {{Computer Vision}} and {{Pattern Recognition}}},
   author = {Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
   year = {2015},
-  pages = {1--9},
-  file = {/Users/thesofakillers/Zotero/storage/6J7RJHKJ/Szegedy et al_2015_Going Deeper With Convolutions.pdf;/Users/thesofakillers/Zotero/storage/WEDRG23Q/Szegedy_Going_Deeper_With_2015_CVPR_paper.html}
+  pages = {1--9}
 }
 
-@article{tokovininMeasuringTurbulenceProfile2002,
+@article{tokovinin_measuring_2002,
   title = {Measuring Turbulence Profile from Scintillations of Single Stars},
   author = {Tokovinin, A. and Kornilov, V.},
   year = {2002},
   volume = {266},
   pages = {104},
-  isbn = {9781583811061},
-  file = {/Users/thesofakillers/Zotero/storage/WKGQFU8X/Tokovinin_Kornilov_2002_Measuring turbulence profile from scintillations of single stars.pdf}
+  isbn = {9781583811061}
 }
 
-@article{vanmerrienboerTangentAutomaticDifferentiation2017,
+@article{van_merrienboer_tangent_2017,
   title = {Tangent: {{Automatic Differentiation Using Source Code Transformation}} in {{Python}}},
   shorttitle = {Tangent},
   author = {{van Merri{\"e}nboer}, Bart and Wiltschko, Alexander B. and Moldovan, Dan},
@@ -591,11 +586,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs, stat},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Mathematical Software,Statistics - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/BVEGULZZ/van Merriënboer et al_2017_Tangent.pdf;/Users/thesofakillers/Zotero/storage/4KICLZW7/1711.html}
+  keywords = {Computer Science - Mathematical Software,Statistics - Machine Learning}
 }
 
-@article{vaswaniAttentionAllYou2017a,
+@article{vaswani_attention_2017,
   ids = {vaswaniAttentionAllYou2017,vaswaniAttentionAllYou2017b},
   title = {Attention {{Is All You Need}}},
   author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
@@ -606,17 +600,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/3BTBLEKW/Vaswani et al_2017_Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/833PWTK7/Vaswani et al_2017_Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/REJG7MK8/Vaswani et al. - 2017 - Attention Is All You Need.pdf;/Users/thesofakillers/Zotero/storage/EXQJI2IJ/1706.html;/Users/thesofakillers/Zotero/storage/V4VIC3VK/1706.html;/Users/thesofakillers/Zotero/storage/WNA6HCQ7/1706.html}
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning}
 }
 
-@misc{WhatJetStream,
-  title = {What {{Is}} the {{Jet Stream}}? | {{NOAA SciJinks}} \textendash{} {{All About Weather}}},
-  howpublished = {https://scijinks.gov/jet-stream/},
-  file = {/Users/thesofakillers/Zotero/storage/JEBEY588/jet-stream.html}
-}
-
-@book{yatesMindIlluminatedComplete2017,
+@book{yates_mind_2017,
   title = {The {{Mind Illuminated}}: {{A Complete Meditation Guide Integrating Buddhist Wisdom}} and {{Brain Science}} for {{Greater Mindfulness}}},
   shorttitle = {The {{Mind Illuminated}}},
   author = {Yates, John and Immergut, Matthew and Graves, Jeremy},
@@ -628,7 +615,7 @@
   langid = {english}
 }
 
-@article{zhangUnderstandingDeepLearning2017,
+@article{zhang_understanding_2017,
   title = {Understanding Deep Learning Requires Rethinking Generalization},
   author = {Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
   year = {2017},
@@ -638,11 +625,10 @@
   eprinttype = {arxiv},
   primaryclass = {cs},
   archiveprefix = {arXiv},
-  keywords = {Computer Science - Machine Learning},
-  file = {/Users/thesofakillers/Zotero/storage/LRR4CXIX/Zhang et al. - 2017 - Understanding deep learning requires rethinking ge.pdf;/Users/thesofakillers/Zotero/storage/95W7WGCC/1611.html}
+  keywords = {Computer Science - Machine Learning}
 }
 
-@article{zhangUnderstandingDeepLearning2021,
+@article{zhang_understanding_2021,
   title = {Understanding Deep Learning (Still) Requires Rethinking Generalization},
   author = {Zhang, Chiyuan and Bengio, Samy and Hardt, Moritz and Recht, Benjamin and Vinyals, Oriol},
   year = {2021},
@@ -652,8 +638,7 @@
   number = {3},
   pages = {107--115},
   issn = {0001-0782},
-  doi = {10.1145/3446776},
-  file = {/Users/thesofakillers/Zotero/storage/7NALMHTK/Zhang et al. - 2021 - Understanding deep learning (still) requires rethi.pdf}
+  doi = {10.1145/3446776}
 }
 
 
