--- a/2020-08-24t15-19-14z.md
+++ b/2020-08-24t15-19-14z.md
@@ -8,7 +8,7 @@ The Zettelkasten is a system for taking notes and knowledge management made
 famous by prolific German sociologist
 [Niklas Luhman](https://en.wikipedia.org/wiki/Niklas_Luhmann) and summarised to
 a modern audience by Sonke Ahrens in his book "How to Take Smart Notes"
-[@ahrensHowTakeSmart2017]. The underlining principle of the system is to act as
+[@ahrens_how_2017]. The underlining principle of the system is to act as
 a second brain, facilitating connections and discovery of insights. The method
 can be summarised in the following steps:
 
