--- a/2020-08-26t10-01-09z.md
+++ b/2020-08-26t10-01-09z.md
@@ -19,6 +19,6 @@ However, to receive positive feedback, we need to be open to all forms of
 feedback, including negative feedback. This is because without negative
 feedback, we cannot know what to improve on, and cannot as such cannot improve
 and obtain the aforementioned positive feedback. This mentality is known as the
-_growth mindset_ [@ahrensHowTakeSmart2017].
+_growth mindset_ [@ahrens_how_2017].
 
 ## References
