--- a/2020-08-26t10-04-56z.md
+++ b/2020-08-26t10-04-56z.md
@@ -6,7 +6,7 @@ id: 2020-08-26t10-04-56z
 
 Just like [attention](./2020-08-28t17-40-26z.md), our short-term memory is
 limited. It has been shown that we can hold a maximum of 7 +/- 2 things in our
-mind at any given time [@ahrensHowTakeSmart2017].
+mind at any given time [@ahrens_how_2017].
 
 We can "hack" our short-term memory by "bundling" things together, i.e.
 grouping related things together so to find them via connections. ( See
