--- a/2020-08-26t10-13-50z.md
+++ b/2020-08-26t10-13-50z.md
@@ -5,7 +5,7 @@ id: 2020-08-26t10-13-50z
 ---
 
 It has been shown that decision-making is one of the most exhausting activities
-of our day to day lives [@ahrensHowTakeSmart2017].
+of our day to day lives [@ahrens_how_2017].
 
 Reducing the number of decisions we need to take can hence save energy and
 willpower that we can more wisely allocate towards more important endeavours,
