--- a/2020-08-30t21-46-22z.md
+++ b/2020-08-30t21-46-22z.md
@@ -6,7 +6,7 @@ id: 2020-08-30t21-46-22z
 
 Optical Turbulence (OT) is a phenomenon in which wavefronts from celestial bodies
 are perturbed when passing through our atmosphere, due to small fluctuations in
-the atmosphere's refractive index [@hagelinOpticalTurbulenceInfluence].
+the atmosphere's refractive index [@hagelin_optical_2010].
 
 These fluctuations arise due to [wind shear](./2020-08-30t21-55-33z.md) and
 thermally stable stratification of the atmosphere.
