--- a/2020-08-30t21-49-34z.md
+++ b/2020-08-30t21-49-34z.md
@@ -6,6 +6,6 @@ id: 2020-08-30t21-49-34z
 
 Seeing is the metric corresponding to the quality of an observation. More
 rigorously, seeing quantifies the apparent angular diameter of a point source
-of light [@hagelinOpticalTurbulenceInfluence].
+of light [@hagelin_optical_2010].
 
 ## References
