--- a/2020-08-30t21-58-47z.md
+++ b/2020-08-30t21-58-47z.md
@@ -7,7 +7,7 @@ id: 2020-08-30t21-58-47z
 Adaptive Optics is a method for accounting for the effects of
 [Optical Turbulence](./2020-08-30t21-46-22z.md) on ground-based observations by
 deforming the mirrors of the telescope so to counteract the turbulence in the
-atmosphere [@informationeso.orgAdaptiveOptics].
+atmosphere [@informationesoorg_active_nodate].
 
 This is done in real-time by using a bright reference star whose true magnitude
 we know of and observing the effect of the atmosphere on it.
