--- a/2020-09-02t17-19-14z.md
+++ b/2020-09-02t17-19-14z.md
@@ -24,9 +24,9 @@ to enter each circular aperture at slightly different angles, causing the
 resulting images to shift relative to one another.
 
 The time-averaged motion of the images is found to be proportional of the
-astronomical seeing, which can thus be measured by the instrument. [@pedersenSeeingMeasurementsDifferential1988]
+astronomical seeing, which can thus be measured by the instrument. [@pedersen_seeing_1988]
 
 The mathematics and theory behind this proportionality can be found in the work
-by [@sarazinESODifferentialImage1990]
+by [@sarazin_eso_1990]
 
 ## References
