--- a/2020-09-02t17-27-05z.md
+++ b/2020-09-02t17-27-05z.md
@@ -8,7 +8,7 @@ id: 2020-09-02t17-27-05z
 
 A FASS (Full Aperture Seeing Sensor) is a technique for atmospheric turbulence
 monitoring based on high resolution CCD Fourier processing of scintillation
-images [@guesalagaFASSFullAperture2016], to replace well known
+images [@guesalaga_fass_2016], to replace well known
 [MASS](./2020-09-03t16-29-07z.md) and [DIMM](./2020-09-02t17-19-14z.md)
 alternatives.
 
