--- a/2020-09-07t14-04-03z.md
+++ b/2020-09-07t14-04-03z.md
@@ -8,7 +8,7 @@ In statistics, hypothesis testing is a method for evaluating hypotheses.
 A hypothesis is a proposed explanation for an observed phenomenon.
 
 The way hypothesis testing works is in a way analogous to how proof by
-contradiction works [@goldmanBasicsHypothesisTests2018].
+contradiction works [@goldman_basics_2018].
 
 Unlike proof by contradiction though, the conclusions obtained via hypothesis
 testing do not underline some _absolute_ truth. This is by nature of
