--- a/2020-10-09t14-24-36z.md
+++ b/2020-10-09t14-24-36z.md
@@ -14,8 +14,8 @@ source code into a differential version of itself.
 
 Interestingly, source code transformation can also be used for
 [reverse-mode autodiff](2020-10-08t15-31-20z), as is done in
-[Zygote](https://github.com/FluxML/Zygote.jl) [@innesDonUnrollAdjoint2019] and
+[Zygote](https://github.com/FluxML/Zygote.jl) [@innes_dont_2019] and
 [Tangent](https://github.com/google/tangent)
-[@vanmerrienboerTangentAutomaticDifferentiation2017]
+[@van_merrienboer_tangent_2017]
 
 ## References
