--- a/2021-04-22t14-59-37z.md
+++ b/2021-04-22t14-59-37z.md
@@ -8,7 +8,7 @@ tags: [uva, uva_dl1]
 A Long Short-Term Memory (LSTM) is a type of
 [Recurrent Neural Network](./2020-09-04t13-57-25z.md) that is capable to learn
 long-term dependencies through the use of specialized cells
-[@hochreiterLongShortTermMemory1997c].
+[@hochreiter_long_1997].
 
 In principle, any RNN can learn long-term dependencies. However, with vanilla
 RNNs this is very difficult to achieve due to the issue of
@@ -35,7 +35,7 @@ In particular, we have 3 kinds of gates:
 - an output gate: regulates what to send to the next memory cell, to be used to
   update the cell state at that timestep
 - a forget gate, introduced to the LSTM architecture in a later paper
-  [@gersLearningForgetContinual2000] : removes previously-learned information
+  [@gers_learning_2000] : removes previously-learned information
   that is no longer relevant
 
 ![An LSTM memory
