--- a/2021-12-20t18-42-28z.md
+++ b/2021-12-20t18-42-28z.md
@@ -14,7 +14,7 @@ The resulting vectors contain explicit interpretable information on the word
 usage in context and due to the sparse nature of language, were quite sparse and
 long.
 
-It has been shown [@baroniDonCountPredict2014] that training a model to
+It has been shown [@baroni_dont_2014] that training a model to
 _predict_ plausible contexts for a given word, learning the word representations
 in the process, leads to much better results.
 
