--- a/2022-04-11t10-31-19z.md
+++ b/2022-04-11t10-31-19z.md
@@ -4,20 +4,20 @@ title: The T0 Language Model
 id: 2022-04-11t10-31-19z
 ---
 
-T0/T0+/T0++ ("tee-zero (plus (plus))") [@sanhMultitaskPromptedTraining2022] is a
+T0/T0+/T0++ ("tee-zero (plus (plus))") [@sanh_multitask_2022] is a
 zero-shot capable general [language model](./2021-12-20t11-06-56z.md) (LM) based
 on the 11B parameter architecture of the [T5 model](./2022-05-12t15-31-59z.md)
-[@raffelExploringLimitsTransfer2020]. Unlike other zero-shot LM's, T0 achieves
+[@raffel_exploring_2020]. Unlike other zero-shot LM's, T0 achieves
 generalization via _explicit_ training on a variety of tasks (multitask
 learning). This is made possible by re-structuring a variety of supervised
 learning datasets into human-readable prompted form via specialized tool known
-as PromptSource [@bachPromptSourceIntegratedDevelopment2022].
+as PromptSource [@bach_promptsource_2022].
 
-Despite being 16x smaller, T0 outperforms GPT-3 [@brownLanguageModelsAre2020] in
+Despite being 16x smaller, T0 outperforms GPT-3 [@brown_language_2020] in
 generalization to several held-out tasks.
 
 It should be noted that T5, in this case, actually refers to T5+LM, Lester et
-al. (2021)'s LM-adapted T5 model [@lesterPowerScaleParameterEfficient2021].
+al. (2021)'s LM-adapted T5 model [@lester_power_2021].
 
 The authors also experiment with robustness to prompt formulation. They find
 that training on more prompts per dataset leads to better and more robust
