--- a/2022-05-12t15-31-59z.md
+++ b/2022-05-12t15-31-59z.md
@@ -4,7 +4,7 @@ title: The T5 Language Model
 id: 2022-05-12t15-31-59z
 ---
 
-T5 ("tee-five") [@raffelExploringLimitsTransfer2020] is a large text-to-text
+T5 ("tee-five") [@raffel_exploring_2020] is a large text-to-text
 encoder-decoder transformer pre-trained on a large, cleaned version of Common
 Crawl (C4). The model is designed in a way such that it can be easily fine-tuned
 for transfer on a variety of downstream tasks, reformatted as text-to-text
