--- a/2020-08-26t10-02-05z.md
+++ b/2020-08-26t10-02-05z.md
@@ -10,6 +10,6 @@ actually doing them in parallel as the name suggests. The result is that our
 attention is constantly interrupted.
 
 It has been shown that for this reason, multitasking decreases productivity
-[@ahrensHowTakeSmart2017]
+[@ahrens_how_2017]
 
 ## References
