--- a/2020-08-26t10-09-40z.md
+++ b/2020-08-26t10-09-40z.md
@@ -7,7 +7,7 @@ id: 2020-08-26t10-09-40z
 The Zeigarnik Effect describes the phenomenon wherein pending tasks occupy our
 short-term memory until they are completed OR until they are written down in
 a way that convinces us that they will be taken care of eventually
-[@ahrensHowTakeSmart2017].
+[@ahrens_how_2017].
 
 As such, writing down less important and urgent tasks and ideas creates space
 in our minds for ruminating and focusing on more complex topics.
