--- a/2020-08-26t20-49-24z.md
+++ b/2020-08-26t20-49-24z.md
@@ -5,7 +5,7 @@ id: 2020-08-26t20-49-24z
 ---
 
 When tagging notes within a [zettelkasten system](./2020-08-24t15-19-14z.md)
-[@ahrensHowTakeSmart2017] and elsewhere, the tags should help in _retrieval_
+[@ahrens_how_2017] and elsewhere, the tags should help in _retrieval_
 rather than _archival_.
 
 This means that the tags should aid the user in finding the notes, rather than
@@ -14,7 +14,7 @@ categorization.
 
 We can achieve this by using the tags to provide _context_ to the notes. Ask
 yourself, in which circumstance would it be convenient to find this note? This
-suggestion is also found in Getting Things Done [@hambergGTD15Minutes2010].
+suggestion is also found in Getting Things Done [@hamberg_gtd_2010].
 
 For example, we may tag a task that we can only complete while using a computer
 with the tag "computer". This allows us to know exactly what we need to do when
