--- a/2020-08-28t17-40-26z.md
+++ b/2020-08-28t17-40-26z.md
@@ -6,7 +6,7 @@ id: 2020-08-28t17-40-26z
 
 There is a wide gamut of "types" of attention, ranging from focused attention
 to something we may refer to as 'floating' attention
-[@ahrensHowTakeSmart2017].
+[@ahrens_how_2017].
 
 - Focused attention is the state of mind in which you are rigidly and intensely
   focusing on a specific task. Examples include:
