--- a/2020-08-28t22-06-03z.md
+++ b/2020-08-28t22-06-03z.md
@@ -7,7 +7,7 @@ id: 2020-08-28t22-06-03z
 The [Zettelkasten system](./2020-08-24t15-19-14z.md) is purposely designed to
 constantly provide the user with feedback, given the benefits of
 [feedback](./2020-08-26t10-01-09z.md) on learning and enjoyment
-[@ahrensHowTakeSmart2017]. The zettelkasten gives the user feedback in the
+[@ahrens_how_2017]. The zettelkasten gives the user feedback in the
 following ways:
 
 - By forcing yourself to write while you read, you get feedback on your understanding.
