--- a/2020-09-03t17-25-35z.md
+++ b/2020-09-03t17-25-35z.md
@@ -7,4 +7,4 @@ id: 2020-09-03t17-25-35z
 Scintillation Index refers to the amount of
 [scintillation](./2020-09-03t17-13-39z.md) measured in an observation.
 
-[@osbornAtmosphericScintillationAstronomical2015]
+[@osborn_atmospheric_2015]
