--- a/2021-12-22t15-50-48z.md
+++ b/2021-12-22t15-50-48z.md
@@ -17,7 +17,7 @@ Two metrics that can capture these qualities are
 
 - Inception score (IS): This is a score that makes use of a pre-trained deep
   learning classifier, originally the Inception model
-  [@szegedyGoingDeeperConvolutions2015]. It has a lowest value of 1.0 and a
+  [@szegedy_going_2015]. It has a lowest value of 1.0 and a
   highest value of the number of classes supported by the classification model
   used. The higher the inception score, the better our GAN.
 - The Fréchet Inception Distance (FID): which measures the distance between our
