git subrepo pull literature-notes
subrepo:
  subdir:   "literature-notes"
  merged:   "93520df"
upstream:
  origin:   "git@github.com:thesofakillers/literature-notes.git"
  branch:   "master"
  commit:   "93520df"
git-subrepo:
  version:  "0.4.3"
  origin:   "???"
  commit:   "???"

--- a/literature-notes/references.bib
+++ b/literature-notes/references.bib
@@ -1,4 +1,19 @@
 
+@inproceedings{abadi_deep_2016,
+  title = {Deep {{Learning}} with {{Differential Privacy}}},
+  booktitle = {Proceedings of the 2016 {{ACM SIGSAC Conference}} on {{Computer}} and {{Communications Security}}},
+  author = {Abadi, Martin and Chu, Andy and Goodfellow, Ian and McMahan, H. Brendan and Mironov, Ilya and Talwar, Kunal and Zhang, Li},
+  year = {2016},
+  month = oct,
+  series = {{{CCS}} '16},
+  pages = {308--318},
+  publisher = {{Association for Computing Machinery}},
+  address = {{New York, NY, USA}},
+  doi = {10.1145/2976749.2978318},
+  isbn = {978-1-4503-4139-4},
+  keywords = {deep learning,differential privacy}
+}
+
 @article{agrawal_machine_2019,
   title = {Machine {{Learning}} for {{Precipitation Nowcasting}} from {{Radar Images}}},
   author = {Agrawal, Shreya and Barrington, Luke and Bromberg, Carla and Burge, John and Gazen, Cenk and Hickey, Jason},
