--- a/2020-09-04t14-39-00z.md
+++ b/2020-09-04t14-39-00z.md
@@ -11,4 +11,4 @@ intelligent behaviour in machines. Related notes to get into:
 - [Machine Learning](./2021-09-09t10-48-40z.md)
 - [XLA](./2020-10-08t15-21-35z.md)
 - [Computer Vision](./2021-09-25t17-12-58z.md)
-- [Natural Language Processing](./2021-12-20t10-52-27z)
+- [Natural Language Processing](./2021-12-20t10-52-27z.md)
