--- a/2021-09-11t15-54-04z.md
+++ b/2021-09-11t15-54-04z.md
@@ -21,8 +21,8 @@ us to write
 
 $$
 \begin{align}
-p(D|\vec{w})  &= p(x_1, x_2, \dots, x_N|\vec{w}) \\
-              &=\prod_{i}^{N}p(x_i|\vec{w})
+p(D|\mathbf{w})  &= p(x_1, x_2, \dots, x_N|\mathbf{w}) \\
+              &=\prod_{i}^{N}p(x_i|\mathbf{w})
 \end{align}
 $$
 
