--- a/2022-03-26t12-31-28z.md
+++ b/2022-03-26t12-31-28z.md
@@ -5,6 +5,6 @@ id: 2022-03-26t12-31-28z
 tags: [uva, uva_ir1]
 ---
 
-Information Retrieval (IR) is a sub-fielf of
+Information Retrieval (IR) is a sub-field of
 [Computer Science](./2020-10-14t15-05-24z.md) that studies the theory and
 methods for retrieving information from a collection of resources.
