rl vs sl; typo fix

--- a/2022-10-20t15-15-55z.md
+++ b/2022-10-20t15-15-55z.md
@@ -2,6 +2,7 @@
 date: 2022-10-20 15:15:55
 title: Reinforcement Learning
 id: 2022-10-20t15-15-55z
+tags: [uva, uva_rl]
 ---
 
 Reinforcement Learning (RL) is the area of
