add timestep clarification

--- a/2022-10-21t10-20-25z.md
+++ b/2022-10-21t10-20-25z.md
@@ -6,4 +6,4 @@ tags: [uva, uva_rl]
 ---
 
 In [RL](./2022-10-20t15-15-55z.md), a state $s$ is a representation of the
-environment in which the task is being pursued.
+environment in which the task is being pursued, at a given timestep
