add notion of greediness

--- a/2022-10-20t15-59-00z.md
+++ b/2022-10-20t15-59-00z.md
@@ -9,8 +9,9 @@ The exploration vs exploitation dilemma is one that often comes up in
 [RL](./2022-10-20t15-15-55z.md).
 
 To behave optimally, an RL agent needs to choose the action that maximizes its
-future reward. It needs to "exploit". However, before knowing that this action
-is indeed optimal, it needs to discover it via exploration.
+future reward, the "greedy" action. It needs to "exploit". However, before
+knowing that this action is indeed optimal, it needs to discover it via
+exploration.
 
 The exploration vs exploitation dilemma describes the issue of having to strike
 a balance between the two approaches to be able to solve most RL problems
