fix broken links

--- a/2021-12-22t16-10-11z.md
+++ b/2021-12-22t16-10-11z.md
@@ -11,5 +11,5 @@ As the name implies, Deep Convolutional GANs (DCGANs) are a class of
 Discriminator to [better handle images](./2021-12-21t22-14-36z.md). We note that
 the layers in the generator are transposed convolutions or deconvolutions.
 
-[Batch normalization](./2021-12-21t19-33-00z.md) is of great importance in this
+Batch normalization is of great importance in this
 class of models to stabilize the learning process.
