--- a/2021-12-22t18-43-44z.md
+++ b/2021-12-22t18-43-44z.md
@@ -9,4 +9,4 @@ $$
 \log E_{q_{\phi}(z)}[f(z)] \geq E_{q_{\phi}(z)}[\log f(z)]
 $$
 
-[Read more on Wikipedia](./https://en.wikipedia.org/wiki/Jensen%27s_inequality)
+[Read more on Wikipedia](https://en.wikipedia.org/wiki/Jensen%27s_inequality)
