--- a/2021-12-20t11-29-13z.md
+++ b/2021-12-20t11-29-13z.md
@@ -7,7 +7,7 @@ tags: [uva, uva_nlp1]
 
 In [probability theory](./2021-09-09t11-36-51z.md), a Markov Chain is a model
 concerned with probabilities of _sequences_ of random variables known as
-"states", each of which can take values from ta set (such as a set of words in
+"states", each of which can take values from a set (such as a set of words in
 the context of [NLP](./2021-12-20t10-52-27z.md)).
 
 The defining characteristic of a Markov chain is the Markov assumption: when
