--- a/2022-10-21t12-12-18z.md
+++ b/2022-10-21t12-12-18z.md
@@ -2,6 +2,7 @@
 date: 2022-10-21 12:12:18
 title: (Finite) Markov Decision Processes
 id: 2022-10-21t12-12-18z
+tags: [uva, uva_rl]
 ---
 
 _Markov Decision Processes_ (MDP) is _the_ framework used for formalizing the
