--- a/2022-10-21t12-52-19z.md
+++ b/2022-10-21t12-52-19z.md
@@ -11,5 +11,20 @@ is said to _optimal_ if it outputs the greatest
 possible policy. Mathematically
 
 $$
-\v_\pi(s) \geq v_{\pi'}(s) \quad \forall s, \pi'.
+v_\pi(s) \geq v_{\pi'}(s) \quad \forall s, \pi'.
+$$
+
+In other words, the optimal value function $v_*$ is defined as
+
+$$
+v_*(s) \dot{=} \max_\pi v_\pi(s) \quad \forall s.
+$$
+
+There can be several optimal policies $\pi_*$ for a given task, but they will
+all share the same optimal value function $v_*$. They will also all share the
+same optimal [action-value](./2022-10-21t11-09-20z.md) function $q_*$, defined
+similarly:
+
+$$
+q_*(s, a) \dot{=} \max_\pi q_\pi(s, a) \quad \forall s, a.
 $$
