--- a/2021-12-20t15-41-09z.md
+++ b/2021-12-20t15-41-09z.md
@@ -2,6 +2,7 @@
 date: 2021-12-20 15:41:09
 title: Constituents in Syntactic Parsing
 id: 2021-12-20t15-41-09z
+tags: [uva, uva_nlp1]
 ---
 
 In [syntactic parsing](./2021-12-19t16-26-08z.md), a constituent is a phrase
