--- a/2022-10-20t15-42-45z.md
+++ b/2022-10-20t15-42-45z.md
@@ -1,7 +1,6 @@
 ---
 date: 2022-10-20 15:42:45
-title: What are the main differences between Supervised and Reinforcement
-Learning?
+title: Differences between Supervised and Reinforcement Learning
 id: 2022-10-20t15-42-45z
 tags: [uva, uva_rl]
 ---
